--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 ---
-title: The last sales CRM you'll ever need
-description: Track and optimize your sales team in real time
+title: Self Success Trail
+description: Get on tbe FAST TRACK to becoming the BEST LEADER EVER.
 ---
 <section class="hero">
 	<div class="text-container">
-		<h1 class="editable">The last sales CRM <strong>you'll ever need</strong></h1>
-		<p class="subtext editable">Track and optimize your sales team in real time.</p>
-		<div class="cta button alt"><a href="{{ site.baseurl }}/sign-up/">Get Started Free</a></div>
+		<h1 class="editable">Get on the <strong>FAST TRACK</strong></h1>
+		<p class="subtext editable">to becoming the <strong>BEST LEADER EVER.</strong></p>
+		<div class="cta button alt"><a href="{{ site.baseurl }}/sign-up/">Download Now</a></div>
 		<div>
 			<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
 		</div>
@@ -63,7 +63,7 @@ description: Track and optimize your sales team in real time
 	</section>
 
 	<section class="bottom-cta">
-		<h2 class="editable"><strong>Improve</strong> your sales process today</h2>
-		<div class="button alt"><a href="#">Get Started Free</a></div>
+		<h2 class="editable">Get on the <strong>FAST TRACK</strong></h2>
+		<div class="button alt"><a href="#">Download Now</a></div>
 	</section>
 </div>
