--- a/sign-up/index.html
+++ b/sign-up/index.html
@@ -48,11 +48,11 @@
 	<section class="page">
 		<div class="container ">
 			
-				<h2>Our team</h2>
+				<h2>Just one more step...</h2>
 			
 			
 				<p class="subtext editable" data-cms-source="/about/index.html" data-cms-index="0">
-				We've built an amazing team of <strong>developers</strong>, marketers, designers and sales people. sdsd sds
+				Please enter your name and email below, and I'll send A Leader's Cheatsheet to you right away!
 			</p>
 			
 			<div class="AW-Form-1888350413"></div>
