--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@ description: Get on tbe FAST TRACK to becoming the BEST LEADER EVER.
 
 	<section class="bottom-cta">
 		<h2 class="editable">Get on the <strong>FAST TRACK</strong></h2>
-		<div class="button alt"><a href="#">Download Now</a></div>
+		<div class="button alt"><a href="{{ site.baseurl }}/sign-up/">Download Now</a></div>
 	</section>
 </div>
